--- a/example/data/projects/project-1.json
+++ b/example/data/projects/project-1.json
@@ -1,15 +1,11 @@
 {
-  "title": "Project 1i",
-  "date": "2018-12-10T00:00:00.000Z",
+  "name": "project-1",
+  "slug": "project-1",
+  "title": "Project 1ids",
+  "date": "12/9/2018",
   "tags": [
     "nuxt",
     "firebase"
   ],
-  "bodyContent": "# Heading level 1\n\n- item 1\n- item 2\n\n> Blockquotes\n\n1. do this\n2. then this\n3. then that",
-  "bodyHtml": "<h1>Heading level 1</h1>\n<ul>\n<li>item 1</li>\n<li>item 2</li>\n</ul>\n<blockquote>\n<p>Blockquotes</p>\n</blockquote>\n<ol>\n<li>do this</li>\n<li>then this</li>\n<li>then that</li>\n</ol>\n",
-  "dir": "example/data/projects",
-  "base": "project-1.json",
-  "ext": ".json",
-  "sourceBase": "project-1.md",
-  "sourceExt": ".md"
+  "content": "<p>ds</p>\n<h1>Heading level 1</h1>\n<ul>\n<li>item 1</li>\n<li>item 2</li>\n</ul>\n<blockquote>\n<p>Blockquotes</p>\n</blockquote>\n<ol>\n<li>do this</li>\n<li>then this</li>\n<li>then that</li>\n</ol>\n"
 }
