--- a/example/data/projects.json
+++ b/example/data/projects.json
@@ -2,12 +2,8 @@
   {
     "name": "project-1",
     "slug": "project-1",
-    "title": "Project 1ids",
-    "date": "12/9/2018",
-    "tags": [
-      "nuxt",
-      "firebase"
-    ],
-    "content": "<p>ds</p>\n<h1>Heading level 1</h1>\n<ul>\n<li>item 1</li>\n<li>item 2</li>\n</ul>\n<blockquote>\n<p>Blockquotes</p>\n</blockquote>\n<ol>\n<li>do this</li>\n<li>then this</li>\n<li>then that</li>\n</ol>\n"
+    "title": "Project 1",
+    "date": "",
+    "content": ""
   }
 ]
